<resources>
    <!--Main Activity-->
    <string name="app_name">Student Resources</string>
    <string name="activity_main_student">Student</string>
    <string name="activity_main_advisor">Advisor</string>

    <!--Advisor Login Activity-->
    <string name="activity_advisor_login">Login</string>
    <string name="activity_advisor_username">Please enter your username</string>
    <string name="activity_advisor_password">Please enter your password</string>

    <!--Advisor Event Activity-->
    <string name="advisor_event_add_event">Add an Event</string>
    <string name="advisor_event_edit_event">Edit an Event</string>
    <string name="advisor_event_view_history">View History</string>

    <!--Advisor Add Activity-->
    <string name="event_name">Event Name</string>
    <string name="advisor_add_fields">Fill in the Fields</string>
    <string name="advisor_add_advisor_name">Name of Advisor</string>
    <string name="advisor_add_event_name">Name of the event</string>
    <string name="activity_advisor_event_time">Time of the Event</string>
    <string name="advisor_add_event_date">Event Date</string>
    <string name="advisor_activity_event_location">Event Location</string>
    <string name="advisor_add_organized_by">Organized By:</string>
    <string name="advisor_add_event_description">Event Description</string>
    <string name="advisor_add_submit">Submit</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_location">Event Location</string>
    <string name="organized_by">Organized By</string>
    <string name="event_description">Event Description</string>
    <string name="choose_faculty">Choose Faculty</string>
    <string name="choose_department">Choose Department</string>

    <!--Advisor Edit Event Activity-->
    <string name="advisor_edit_label">Edit Events</string>

    <!--Student Activity-->
    <string name="EventName">TextView</string>

    <!--About Activity-->
    <string name="about">About</string>
    <string name="about_part_one">We are a group of students from SFU committed to making the world a better place, one app at a time
            </string>
    <string name="about_part_two">This app allows students to browse by Faculty and Department to find events relevant to their interests.
            It also allows advisors to add important events to the app, ensuring students are informed and aware of upcoming events</string>
    <string name="about_title">About the Developers</string>
    <string name="sfu_resources_logo">SFU Resources logo</string>

    <string name="version_1_0">Version: 1.0</string>
    <string name="kunal" />
    <string name="button">Button</string>
    <string name="textview">TextView</string>

</resources>