<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:context="com.example.myles.sprint2.AdvisorAdd">

        <TextView
            android:padding="16dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advisor_add_fields"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/advisor_add_event_name"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/activity_advisor_event_time"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/advisor_add_event_date"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/advisor_activity_event_location"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/advisor_add_organized_by"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/advisor_add_event_description"/>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advisor_add_submit"/>



    </LinearLayout>

</ScrollView>
